src/test/deca/context/valid/cmp.deca
{
boolean x = 3.4 > 3;
x = 2 >= 3;
x = 2 < 3;
x = 3 <= 4;
}
