src/test/deca/context/invalid/not.deca
{
boolean x = !4;
}
// @expected_output deca:2:13: Invalid type for operand: int instead of boolean
